Fix up alignment of exhibit page navigation, start using color variables.

--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -14,6 +14,8 @@
 
 //Colors
 
+$primary-color: yellow;
+
 //Susy
 $susy: (
   columns: 16,
