--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -47,7 +47,7 @@ a {
 
 p a,
 span a {
-    background-color: yellow;
+    background-color: $primary-color;
 }
 
 p,
@@ -104,7 +104,7 @@ ul {
     input[type="submit"] {
         appearance: none;
         padding: rhythm(.25) rhythm(.5);
-        background-color: yellow;
+        background-color: $primary-color;
         border: 3px solid #000;
         font-family: $heading-font;
         cursor: pointer;
@@ -194,7 +194,7 @@ nav li {
 }
 
 .secondary-nav li a {
-    background-color: yellow;
+    background-color: $primary-color;
     font-family: $heading-font;
     color: #000;
     padding: rhythm(.25) rhythm(.5);
@@ -217,7 +217,7 @@ nav li {
 }
 
 .pagination a {
-    background-color: yellow;
+    background-color: $primary-color;
     font-family: $heading-font;
     color: #000;
     padding: rhythm(.25) rhythm(.5);
@@ -244,7 +244,7 @@ nav li {
 }
 
 .item-pagination a {
-    background-color: yellow;
+    background-color: $primary-color;
     padding: rhythm(.25) rhythm(.5);
 }
 
@@ -339,7 +339,7 @@ header a {
 }
 
 #top-nav > ul > li > a {
-    color: yellow;
+    color: $primary-color;
 }
 
 #top-nav > ul > li li {
@@ -440,7 +440,7 @@ div#featured {
 }
 
 #featured .record a {
-    color: yellow;
+    color: $primary-color;
 }
 
 #featured .featured-meta {
@@ -456,7 +456,7 @@ div#featured {
 }
 
 #featured .featured-meta h3 {
-    background-color: yellow;
+    background-color: $primary-color;
 }
 
 #featured .featured-meta h3 a {
@@ -520,7 +520,7 @@ footer {
 }
 
 #sort-links a {
-    background-color: yellow;
+    background-color: $primary-color;
     font-family: $heading-font;
     color: #000;
     padding: rhythm(.25) rhythm(.5);
@@ -640,7 +640,7 @@ footer {
 }
 
 .element-text a {
-    background-color: yellow;
+    background-color: $primary-color;
 }
 
 .show #output-format-list {
@@ -752,10 +752,9 @@ button.add_search {
 }
 
 #exhibit-pages {
-    background-color: yellow;
+    background-color: $primary-color;
     padding: rhythm();
     @include bleed(rhythm() rhythm(2) 0);
-    margin-top: rhythm();
     margin-bottom: rhythm();
 }
 
@@ -783,11 +782,28 @@ button.add_search {
     padding: rhythm();
     margin-top: rhythm(2);
     margin-bottom: rhythm(2);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+#exhibit-nav-up {
+    order: 2;
+    margin: 0;
+}
+
+#exhibit-nav-next {
+    order: 3;
+}
+
+#exhibit-nav-next + #exhibit-nav-up:nth-child(2) {
+    margin-left: 33%;
 }
 
 #exhibit-page-navigation a {
     padding: rhythm(.25);
-    background-color: yellow;
+    background-color: $primary-color;
+    display: inline-block;
 }
 
 /* @end */
